@@ -16,6 +16,8 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @RestController
@@ -50,7 +52,7 @@ public class SongController {
       if (messageObject.getMethod() == RequestMethod.POST) {
          createNewSong(messageObject.getModel());
       } else if (messageObject.getMethod() == RequestMethod.DELETE) {
-         deleteSongsMetadata(List.of(messageObject.getModel().getResourceId()));
+         deleteSongsMetadata(Collections.singletonList(messageObject.getModel().getResourceId()));
       }
       System.err.println(value);
    }
